force-app/main/default/objects/rstk__soprod__c/fields/Add_Product_Master__c.field-meta.xml
<CustomField>
    <fullName>Add_Product_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Product Master</label>
    <type>Checkbox</type>
</CustomField>