force-app/main/default/objects/rstk__soprod__c/fields/Common_Names__c.field-meta.xml
<CustomField>
    <fullName>Common_Names__c</fullName>
    <description>Common Name for clearance documents</description>
    <label>Common Names</label>
    <type>TextArea</type>
</CustomField>