force-app/main/default/objects/rstk__soprod__c/fields/Country_Of_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Harvest__c</fullName>
    <description>Country of harvest of all natural components for clearance documents.</description>
    <label>Country Of Harvest</label>
    <type>TextArea</type>
</CustomField>