force-app/main/default/objects/rstk__soprod__c/fields/FMG_Hazardous_Material__c.field-meta.xml
<CustomField>
    <fullName>FMG_Hazardous_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FMG Hazardous Material</label>
    <type>Checkbox</type>
</CustomField>