force-app/main/default/objects/rstk__soprod__c/fields/FMG_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>FMG_Item_Status__c</fullName>
    <label>FMG Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NP_Regular</fullName>
                <label>New Product - Regular</label>
            </value>
            <value>
                <fullName>NP_DNS</fullName>
                <label>New Product - Do Not Sell</label>
            </value>
            <value>
                <fullName>NP_Limited</fullName>
                <label>New Product - Limited Quantity</label>
            </value>
            <value>
                <fullName>Reg</fullName>
                <label>Regular Items</label>
            </value>
            <value>
                <fullName>Reg_At_Risk</fullName>
                <label>Regular At Risk Items</label>
            </value>
            <value>
                <fullName>Parent</fullName>
                <label>Parent Items</label>
            </value>
            <value>
                <fullName>Component</fullName>
                <label>Component Items</label>
            </value>
            <value>
                <fullName>FreeGift</fullName>
                <label>Free Gift</label>
            </value>
            <value>
                <fullName>GWP</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
                <label>Limited Quantity Items</label>
            </value>
            <value>
                <fullName>Closeout</fullName>
                <label>Closeout Items</label>
            </value>
            <value>
                <fullName>Big_Box</fullName>
                <label>Big Box</label>
            </value>
            <value>
                <fullName>DNR</fullName>
                <label>Do Not Reorder</label>
            </value>
            <value>
                <fullName>Spec_Hndlng</fullName>
                <label>Special Handling</label>
            </value>
            <value>
                <fullName>Misc</fullName>
                <label>Misc Items</label>
            </value>
            <value>
                <fullName>DC_Sup</fullName>
                <label>DC Supply</label>
            </value>
            <value>
                <fullName>Stop_Ship</fullName>
                <label>Stop Ship</label>
            </value>
            <value>
                <fullName>No_Longer_Used</fullName>
                <label>No Longer Used</label>
            </value>
            <value>
                <fullName>Dis_Regular</fullName>
                <label>Discontinued Regular</label>
            </value>
            <value>
                <fullName>Undetermined</fullName>
                <default>true</default>
                <label>Undetermined</label>
            </value>
            <value>
                <fullName>Do_not_migrate</fullName>
                <label>Do not migrate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>