force-app/main/default/objects/rstk__soprod__c/fields/FMG_Item_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>FMG_Item_Type_Code__c</fullName>
    <label>FMG Item Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1111116</fullName>
            </value>
            <value>
                <fullName>2221801</fullName>
            </value>
            <value>
                <fullName>2222216</fullName>
            </value>
            <value>
                <fullName>2222218</fullName>
            </value>
            <value>
                <fullName>2221618</fullName>
            </value>
            <value>
                <fullName>9992216</fullName>
            </value>
            <value>
                <fullName>4442216</fullName>
            </value>
            <value>
                <fullName>3332216</fullName>
            </value>
            <value>
                <fullName>2224416</fullName>
            </value>
            <value>
                <fullName>1114444</fullName>
            </value>
            <value>
                <fullName>2222444</fullName>
            </value>
            <value>
                <fullName>3331116</fullName>
            </value>
            <value>
                <fullName>3331117</fullName>
            </value>
            <value>
                <fullName>3331608</fullName>
            </value>
            <value>
                <fullName>1111111</fullName>
            </value>
            <value>
                <fullName>1111112</fullName>
            </value>
            <value>
                <fullName>1111113</fullName>
            </value>
            <value>
                <fullName>3333333</fullName>
            </value>
            <value>
                <fullName>3333444</fullName>
            </value>
            <value>
                <fullName>3339999</fullName>
            </value>
            <value>
                <fullName>1511</fullName>
            </value>
            <value>
                <fullName>9999916</fullName>
            </value>
            <value>
                <fullName>4444444</fullName>
            </value>
            <value>
                <fullName>9999999</fullName>
            </value>
            <value>
                <fullName>9994444</fullName>
            </value>
            <value>
                <fullName>9993311</fullName>
            </value>
            <value>
                <fullName>6666444</fullName>
            </value>
            <value>
                <fullName>6666999</fullName>
            </value>
            <value>
                <fullName>7744999</fullName>
            </value>
            <value>
                <fullName>7744916</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>