force-app/main/default/objects/rstk__soprod__c/fields/Inbound_HTS__c.field-meta.xml
<CustomField>
    <fullName>Inbound_HTS__c</fullName>
    <description>Inbound HTS for inbound clearance documents</description>
    <label>Inbound HTS</label>
    <type>TextArea</type>
</CustomField>