force-app/main/default/objects/rstk__soprod__c/fields/Scientific_Names__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Names__c</fullName>
    <description>Scientifiic Names for Clearance documents</description>
    <label>Scientific Names</label>
    <type>TextArea</type>
</CustomField>